# alive_core

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  scripting_support.numbers  skia.cmake
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
magnum/src/Magnum/: British.h
src/: CMakeLists.txt
src/c_wrapper/: CMakeLists.txt  alive_api.cpp  alive_api.h  inae_api.cpp  inae_api.h  main.cpp
src/core/: BuildInfo.txt  CMakeLists.txt  Developer.txt  IMPORTANT_INFORMATION.txt  alive_version.h  color.cpp  color_type.h  common_types.h  empty_values.h  fill_helper.h  font.h  inae_version.h  initializer.cpp  initializer.h  math_utility.h  profiler.h  resource_manager.cpp  resource_manager.h  skia.cmake  stroke_types.h  utility.h
src/core/alive_types/: class_helpers.h  color_type.cpp  color_type.h  common_types.h  types.h
src/core/asset_management/: asset.cpp  asset.h  asset_manager.cpp  asset_manager.h  database.cpp  database.h  file_database.cpp  file_database.h  font_manager.cpp  font_manager.h
src/core/composition/: canvasbuffer.cpp  canvasbuffer.h  composition_layer_factory.cpp  composition_layer_factory.h  composition_node.cpp  composition_node.h  composition_utility.cpp  composition_utility.h  image_layer_node.cpp  image_layer_node.h  layer_node.cpp  layer_node.h  null_layer_node.cpp  null_layer_node.h  paint_context.cpp  paint_context.h  precomposition_layer_node.cpp  precomposition_layer_node.h  shape_layer_node.cpp  shape_layer_node.h  solid_layer_node.cpp  solid_layer_node.h  text_layer_node.cpp  text_layer_node.h
src/core/composition/animation_nodes/: animation_node.h  animation_node_factory.cpp  animation_node_factory.h  compound_trim_path.cpp  compound_trim_path.h  ellipse_node.cpp  ellipse_node.h  fill_node.cpp  fill_node.h  group_node.cpp  group_node.h  path_algorithm.cpp  path_algorithm.h  path_node.h  polystar_node.cpp  polystar_node.h  rectangle_node.cpp  rectangle_node.h  repeater_node.cpp  repeater_node.h  shape_node.cpp  shape_node.h  shape_path_node.cpp  shape_path_node.h  shape_transformation_node.cpp  shape_transformation_node.h  skia_path_algorithm.cpp  stroke_node.cpp  stroke_node.h  transformation_node.cpp  transformation_node.h  trim_node.cpp  trim_node.h
src/core/composition/interfaces/: painting_element.h  trim_element.h
src/core/constants/: file_extension.h
src/core/exporter/: design.txt  exporter.cpp  exporter.h  windows_exporter.cpp  windows_exporter.h
src/core/importer/: importer.cpp  importer.h  svg_importer.cpp  svg_importer.h
src/core/inae_types/: types.h
src/core/logging/: logger.cpp  logger.h
src/core/model/: composition.cpp  composition.h  transform.cpp  transform.h  tree_item.cpp  tree_item.h
src/core/model/common/: font_setting.cpp  font_setting.h
src/core/model/keyframes/: keyframe.h  keyframe_base.cpp  keyframe_base.h  keyframe_utility.h  keyframe_value_provider.h  lottie_interpretor.cpp  lottie_interpretor.h
src/core/model/layers/: image_layer.cpp  image_layer.h  layer.cpp  layer.h  null_layer.cpp  null_layer.h  precomposition_layer.cpp  precomposition_layer.h  shape_layer.cpp  shape_layer.h  solid_layer.cpp  solid_layer.h  text_layer.cpp  text_layer.h  text_layer_properties.h
src/core/model/property/: dynamic_property.h  dynamic_property_animator.h  easing.cpp  easing.h  final_properties.h  layer_descriptor.h  object.cpp  object.h  object_descriptor.cpp  object_descriptor.h  property.cpp  property.h  property_animator.h  property_descriptor.cpp  property_descriptor.h  property_descriptors.h  property_extendable.cpp  property_extendable.h  property_group.cpp  property_group.h  property_macros.h  property_template.cpp  property_template.h  property_type.cpp  property_type.h  property_type_information.h  property_update_listener.h  property_value_validator.h  static_property.h  static_property_factory.cpp  static_property_factory.h  trim_properties.h  update_listener.h
src/core/model/property_system/: constant_property.h  keyframe_property.h  property.h  property_factory.h
src/core/model/shape_items/: ellipse.cpp  ellipse.h  fill.cpp  fill.h  gradient_fill.cpp  gradient_fill.h  group.cpp  group.h  merge.cpp  merge.h  polystar.cpp  polystar.h  rectangle.cpp  rectangle.h  repeater.cpp  repeater.h  repeater_properties.h  shape.cpp  shape.h  shape_factory.cpp  shape_factory.h  shape_item.cpp  shape_item.h  shape_properties_macros.h  shape_transformation.cpp  shape_transformation.h  stroke.cpp  stroke.h  trim.cpp  trim.h
src/core/model/text_primitives/: singleline_run_handler.cpp  singleline_run_handler.h  text.cpp  text.h  text_document_property.cpp  text_document_property.h
src/core/path_primitives/: bezier_path.cpp  bezier_path.h  curve_vertex.cpp  curve_vertex.h  dash_element.cpp  dash_element.h  path_element.cpp  path_element.h
src/core/private/: json.h
src/core/script/: expression_engine.cpp  expression_engine.h  expression_engine_interface.h  expression_value_provider.h  helper.cpp  helper.h
src/core/script_sandbox/: main.cpp
src/core/serializer/: editor_support.h  inae_parser.cpp  inae_parser.h  json_helper.cpp  json_helper.h  json_property_parser.h  lottie_keys.h  lottie_parser.cpp  lottie_parser.h  message.h  serializer.cpp  serializer.h  serializer_common.h  shape_serializer.cpp  shape_serializer.h
src/core/skia_conversion/: skia_to_alive.cpp  skia_to_alive.h  skia_to_inae.cpp  skia_to_inae.h
src/core/skia_test_app/: main_cpu.cpp  main_cpu_text.cpp  main_gpu.cpp
src/core/tagging/: tag.cpp  tag.h  tag_manager.cpp  tag_manager.h  taggable.cpp  taggable.h
src/core_utility/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  main.cpp
src/tester/: CMakeLists.txt  alivetest_fixture.cpp  alivetest_fixture.h  directory_comparator.cpp  directory_comparator.h  main.cpp  tester.cpp  tester.h
(+3 files in other folders)
